[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "llama_stack_lightspeed_providers"
version = "0.1.0"
description = "Lightspeed providers for llama-stack"
requires-python = ">=3.10"
dependencies = ["llama-stack", "httpx"]

[tool.setuptools]
packages = ["llama_stack_lightspeed_providers"]


