[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lightspeed_stack_providers"
version = "0.1.0"
description = "Lightspeed Stack providers for llama-stack"
requires-python = ">=3.10"
dependencies = ["llama-stack", "httpx"]

[tool.setuptools]
packages = ["lightspeed_stack_providers"]


